# mixx-glass-studio

./: .cursorrules  .env  .gitignore  .suite-studio.yml  .windsurfrules  AUDIT_SUMMARY.md  AURA_SYSTEM_REVIEW_DEC_2025.md  AUTOMATION_PLAYBACK_VERIFICATION.md  BLACK_SCREEN_DEBUG.md  BUS_METERING_IMPLEMENTATION.md  COLOR_PALETTE.md  COMPLETE_INTEGRATION_REPORT.md  COMPLETE_SYSTEM_TEST_RESULTS.md  COMPLETION_REPORT.md  CONSOLE_CLEANUP_AUDIO_COMPLETE.md  CONSOLE_CLEANUP_COMPLETE.md  CONSOLE_CLEANUP_FINAL.md  CONSOLE_CLEANUP_IMPORT_COMPLETE.md  CONSOLE_CLEANUP_PROGRESS.md  CONSOLE_CLEANUP_SUMMARY.md  CORE_INTEGRATION_STATUS.md  CRITICAL_BLOCKERS_COMPLETE.md  CRITICAL_BLOCKERS_FIXED.md  Cargo.toml  DESKTOP_DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  FADER_ANIMATION_FIX.md  FLOW_SOUND_DIAGNOSTIC_REPORT.md  FRESH_AUDIT_2025.md  FlowDock-Blueprint.txt  FlowDock.config.json  IMMERSIVE_FADER_COMPLETE.md  IMMERSIVE_FADER_DESIGN.md  LAYOUT_SYSTEM.md  MAJOR_PLACEHOLDERS_COMPLETE.md  MIXER_AUDIT.md  MIXING_MASTERING_COMPLETE.md  PLACEHOLDER_AUDIT_PLAN.md  PRIME_DATABASE_SETUP.md  PROFESSIONAL_FADER_COMPLETE.md  (+40 more)
.agent/workflows/: audio-upgrade.md  phase-20-master-chain.md  phase-21-dither.md  phase-22-audio-export.md  phase-23-simd.md  rust-dsp-advanced-phases.md
.cursor/rules/: ai-system-architecture.mdc  audio-analysis-pipeline.mdc  audio-processing-algorithms.mdc  component-interaction-flow.mdc  mixxcclub.mdc  rules.mdc
.giga/: specifications.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
aura-bloom-menu/: App.tsx  README.md  index.html  metadata.json  package.json
aura-bloom-menu/components/: BloomMenu.tsx  Petal.tsx  icons.tsx
docs/: ALL_PHASES_COMPLETE.md  ALS_DISPLAY_DECISION_SYSTEM.md  BUTTON_DEBUG.md  BUTTON_IMPLEMENTATION_STATUS.md  BUTTON_QUICKSTART.md  BUTTON_SYSTEM.md  BUTTON_TROUBLESHOOTING.md  FLOW_DOCTRINE.md  FLOW_INTEGRATION_REPORT.md  FLOW_REGISTRATION_120_COMPLETE.md  FLOW_REGISTRATION_COMPLETE.md  FLOW_REGISTRATION_PROGRESS.md  FLOW_VISION_2025.md  FLOW_VISION_QUICK_REFERENCE.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_COMPLETE.md  MULTITRACK_DAW_FLOW_ANALYSIS.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_TESTING_GUIDE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PRIME_SPECTRAL_STEM_LAB_INTEGRATION.md  PROFESSIONAL_GLASS_UI.md  QNN_FLOW_INTEGRATION_COMPLETE.md  QUANTUM_OPTIMIZATIONS.md  QUANTUM_SCHEDULER_INTEGRATION.md  QUANTUM_SPEED_OPTIMIZATIONS.md  SECURITY_SETUP.md  STEM_SEPARATION_FIX.md  STEM_SEPARATION_FIX_SUMMARY.md  SYSTEM_ARCHITECTURE_MAP.md  SYSTEM_RULES.md  Studio-UI-contract.md  UX_GRAPHICS_UPGRADE_AUDIT.md  arrange-timeline-playhead.md
docs/architecture/: mixx-audio-core-architecture.md  prime-database-architecture.md  prime-database-schema.sql  prime-database-setup-guide.md  prime-database-summary.md  prime-database-vector-extension.sql
docs/audits/: ai-services-detailed.md  audio-libraries-detailed.md  build-tools-detailed.md  flow-audit-2025-11-13.md  priority-matrix.md  recommendations-summary.md  third-party-technology-audit.md  ui-components-detailed.md
docs/briefs/: DATA_COLLECTION_SETUP_COMPLETE.md  (+16 more)
electron/: main.js  preload.js
include/: mixx_core_generated.h
scripts/: create-pr.js  generateTestAudio.js  setup-data-collection.ts  setup-prime-database.ps1  setup-prime-database.sh  test-clara-prototype.ts  test-endpoint-simulator.js  test-revolutionary-stem-system.ts  watch-wasm.js
src/: App.tsx  engine.rs  ffi.rs  index.css  index.tsx  lib.rs  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon_base64.txt
src-tauri/src/: analysis_engine.rs  audio_bridge.rs  audio_engine.rs  flow_engine.rs  git.rs  lib.rs  local_llm.rs  main.rs  stem_separation.rs
src-tauri/src/dsp/: commands.rs  mod.rs
src-tauri/src/quantum/: mod.rs  superposition.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
supabase/: README.md  config.toml  functions.sql  rls-policies.sql  sample-data.sql  schema.sql
supabase-schema/: schema.sql
(+1092 files in other folders)
