[package]
name = "mixx-glass-studio"
version = "0.1.0"
description = "Mixx Club Studio - Quantum Audio Engine"
authors = ["Mixx Club"]
license = "MIT"
repository = "https://github.com/mixxclub/mixx-glass-studio"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.21"
mixx_core = { path = "..", package = "mixx-glass-studio-core" }
log = "0.4"
env_logger = "0.10"

# Quantum Engine Dependencies (minimal for now)
num-traits = "0.2"
