[package]
name = "mixx_dsp_wasm"
version = "1.0.0"
edition = "2021"
authors = ["Prime (Mixx Club)"]
description = "WASM-compiled DSP algorithms for AURA DAW"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Better error messages in debug
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
